k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-microservices
  labels:
    app.kubernetes.io/part-of: spring-microservices
