k8s/03-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: spring-microservices
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/part-of: spring-microservices
spec:
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 180
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        app.kubernetes.io/name: auth-service
        app.kubernetes.io/part-of: spring-microservices
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: auth-service
          image: loza64/auth-service:1.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5001
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            timeoutSeconds: 3
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            timeoutSeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            timeoutSeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service # DNS interno: http://auth-service:5001
  namespace: spring-microservices
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 5001
      targetPort: http
