k8s/05-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: spring-microservices
  labels:
    app.kubernetes.io/name: gateway-service
    app.kubernetes.io/part-of: spring-microservices
spec:
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 360
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
        app.kubernetes.io/name: gateway-service
        app.kubernetes.io/part-of: spring-microservices
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gateway-service
          image: loza64/gateway-service:1.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            timeoutSeconds: 3
            failureThreshold: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            timeoutSeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            timeoutSeconds: 3
            periodSeconds: 15
          resources:
            requests:
              cpu: "500m"
              memory: "384Mi"
            limits:
              cpu: "2"
              memory: "768Mi"
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: spring-microservices
spec:
  type: LoadBalancer # Único punto expuesto hacia afuera
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: http
