k8s/06-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: spring-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: loza64/gateway-service:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          startupProbe:
            # El gateway arrancó en ~19-23s en las pruebas, pero mantenemos
            # el mismo margen generoso por consistencia con los otros dos.
            httpGet:
              path: /actuator/health
              port: 5000
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 5000
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 5000
            periodSeconds: 15
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: spring-microservices
spec:
  type: LoadBalancer # Único punto expuesto hacia afuera
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 5000
