k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: loza64/auth-service:1.0.0
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service # DNS interno: http://auth-service:5001
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 5001
      targetPort: 5001
