k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: loza64/user-service:1.0.0
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service # DNS interno: http://user-service:5002
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 5002
      targetPort: 5002
